Increase the width of the delivery page.  This is to prevent the time fields from wrapping.

--- a/static/css/crown_corr.css
+++ b/static/css/crown_corr.css
@@ -99,7 +99,7 @@ div.containerright_middlecolumn {
 }
 
 .containereditdelivery {
-	max-width:550px !important;
+	max-width:600px !important;
 	float: left;
 	padding-top: 40px !important;
 }
